gcc/testsuite/rust/rustc/ui/borrowck/borrowck-move-out-of-overloaded-deref.rs
use std::rc::Rc;

pub fn main() {
    let _x = *Rc::new("hi".to_string());
// { dg-error ".E0507." "" { target *-*-* } .-1 }
}

